allow word breaks in title to avoid scrolling

--- a/static/sass/_post.scss
+++ b/static/sass/_post.scss
@@ -9,6 +9,7 @@
     color: getColor(title);
     margin-bottom: 0.2em;
     margin-top: 0;
+    word-break: break-word;
 }
 
 .post-title a:hover {
